--- a/src/output.css
+++ b/src/output.css
@@ -558,6 +558,10 @@ video {
   position: absolute;
 }
 
+.relative {
+  position: relative;
+}
+
 .left-0 {
   left: 0px;
 }
@@ -614,6 +618,42 @@ video {
   height: 90vh;
 }
 
+.h-screen {
+  height: 100vh;
+}
+
+.h-\[20vh\] {
+  height: 20vh;
+}
+
+.h-\[23vh\] {
+  height: 23vh;
+}
+
+.h-\[22vh\] {
+  height: 22vh;
+}
+
+.h-\[21vh\] {
+  height: 21vh;
+}
+
+.h-\[40vh\] {
+  height: 40vh;
+}
+
+.h-\[10vh\] {
+  height: 10vh;
+}
+
+.h-\[19vh\] {
+  height: 19vh;
+}
+
+.h-\[18vh\] {
+  height: 18vh;
+}
+
 .w-\[100\%\] {
   width: 100%;
 }
@@ -642,8 +682,172 @@ video {
   width: 100%;
 }
 
+.w-\[40vw\] {
+  width: 40vw;
+}
+
+.w-\[35vw\] {
+  width: 35vw;
+}
+
+.w-\[30vw\] {
+  width: 30vw;
+}
+
+.w-\[34vw\] {
+  width: 34vw;
+}
+
+.w-8 {
+  width: 2rem;
+}
+
+.w-12 {
+  width: 3rem;
+}
+
+.w-24 {
+  width: 6rem;
+}
+
+.w-\[120\%\] {
+  width: 120%;
+}
+
+.w-\[140\%\] {
+  width: 140%;
+}
+
+.w-\[13vw\] {
+  width: 13vw;
+}
+
+.w-\[10vw\] {
+  width: 10vw;
+}
+
+.w-\[33vw\] {
+  width: 33vw;
+}
+
+.w-\[33\.5vw\] {
+  width: 33.5vw;
+}
+
 .cursor-pointer {
   cursor: pointer;
+}
+
+.cursor-wait {
+  cursor: wait;
+}
+
+.cursor-auto {
+  cursor: auto;
+}
+
+.cursor-default {
+  cursor: default;
+}
+
+.cursor-text {
+  cursor: text;
+}
+
+.cursor-move {
+  cursor: move;
+}
+
+.cursor-help {
+  cursor: help;
+}
+
+.cursor-not-allowed {
+  cursor: not-allowed;
+}
+
+.cursor-none {
+  cursor: none;
+}
+
+.cursor-context-menu {
+  cursor: context-menu;
+}
+
+.cursor-progress {
+  cursor: progress;
+}
+
+.cursor-cell {
+  cursor: cell;
+}
+
+.cursor-crosshair {
+  cursor: crosshair;
+}
+
+.cursor-vertical-text {
+  cursor: vertical-text;
+}
+
+.cursor-alias {
+  cursor: alias;
+}
+
+.cursor-copy {
+  cursor: copy;
+}
+
+.cursor-no-drop {
+  cursor: no-drop;
+}
+
+.cursor-zoom-out {
+  cursor: zoom-out;
+}
+
+.cursor-nwse-resize {
+  cursor: nwse-resize;
+}
+
+.cursor-ns-resize {
+  cursor: ns-resize;
+}
+
+.cursor-sw-resize {
+  cursor: sw-resize;
+}
+
+.cursor-se-resize {
+  cursor: se-resize;
+}
+
+.cursor-w-resize {
+  cursor: w-resize;
+}
+
+.cursor-s-resize {
+  cursor: s-resize;
+}
+
+.cursor-row-resize {
+  cursor: row-resize;
+}
+
+.cursor-col-resize {
+  cursor: col-resize;
+}
+
+.cursor-grab {
+  cursor: grab;
+}
+
+.cursor-grabbing {
+  cursor: grabbing;
+}
+
+.cursor-all-scroll {
+  cursor: all-scroll;
 }
 
 .flex-col {
@@ -656,6 +860,10 @@ video {
 
 .items-center {
   align-items: center;
+}
+
+.justify-start {
+  justify-content: flex-start;
 }
 
 .justify-center {
@@ -702,6 +910,18 @@ video {
   gap: 2.25rem;
 }
 
+.gap-11 {
+  gap: 2.75rem;
+}
+
+.gap-12 {
+  gap: 3rem;
+}
+
+.gap-14 {
+  gap: 3.5rem;
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
@@ -718,6 +938,10 @@ video {
   border-radius: 0.75rem;
 }
 
+.rounded-sm {
+  border-radius: 0.125rem;
+}
+
 .border-2 {
   border-width: 2px;
 }
@@ -728,6 +952,14 @@ video {
 
 .border-\[1px\] {
   border-width: 1px;
+}
+
+.border {
+  border-width: 1px;
+}
+
+.border-b-\[1px\] {
+  border-bottom-width: 1px;
 }
 
 .border-\[\#9c9c9c\] {
@@ -748,6 +980,164 @@ video {
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.border-gray-200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
+}
+
+.border-gray-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+
+.border-neutral-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(115 115 115 / var(--tw-border-opacity));
+}
+
+.border-neutral-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(163 163 163 / var(--tw-border-opacity));
+}
+
+.border-neutral-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(212 212 212 / var(--tw-border-opacity));
+}
+
+.border-\[blue\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 255 / var(--tw-border-opacity));
+}
+
+.border-\[black\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
+.border-\[px\] {
+  border-color: px;
+}
+
+.border-\[gray\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(128 128 128 / var(--tw-border-opacity));
+}
+
+.border-\[\#bdbcbc\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(189 188 188 / var(--tw-border-opacity));
+}
+
+.border-\[\#c6c5c5\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(198 197 197 / var(--tw-border-opacity));
+}
+
+.border-\[red\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 0 0 / var(--tw-border-opacity));
+}
+
+.border-\[grey\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(128 128 128 / var(--tw-border-opacity));
+}
+
+.border-\[gry\] {
+  border-color: gry;
+}
+
+.border-\[ccpx\] {
+  border-color: ccpx;
+}
+
+.border-\[\] {
+  border-color: ;
+}
+
+.border-\[\#\] {
+  border-color: #;
+}
+
+.border-\[\#6242a\] {
+  border-color: #6242a;
+}
+
+.border-\[\#6242ac\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(98 66 172 / var(--tw-border-opacity));
+}
+
+.border-\[\#6542ac\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(101 66 172 / var(--tw-border-opacity));
+}
+
+.border-\[\#6142ac\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(97 66 172 / var(--tw-border-opacity));
+}
+
+.border-\[\#6132ac\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(97 50 172 / var(--tw-border-opacity));
+}
+
+.border-\[\#6132ab\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(97 50 171 / var(--tw-border-opacity));
+}
+
+.border-\[\#6132an\] {
+  border-color: #6132an;
+}
+
+.border-\[\#6132ae\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(97 50 174 / var(--tw-border-opacity));
+}
+
+.border-\[\#5332ae\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(83 50 174 / var(--tw-border-opacity));
+}
+
+.border-\[\#533511\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(83 53 17 / var(--tw-border-opacity));
+}
+
+.border-\[\#544511\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(84 69 17 / var(--tw-border-opacity));
+}
+
+.border-\[\#7e7e7d\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(126 126 125 / var(--tw-border-opacity));
+}
+
+.border-\[\#e7e7e6\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(231 231 230 / var(--tw-border-opacity));
+}
+
+.border-\[\#d7d7d6\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(215 215 214 / var(--tw-border-opacity));
+}
+
+.border-\[\#b8b8b7\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(184 184 183 / var(--tw-border-opacity));
+}
+
+.border-b-\[black\] {
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
 .bg-\[\#0e3023\] {
@@ -825,6 +1215,31 @@ video {
   background-color: rgb(10 64 69 / var(--tw-bg-opacity));
 }
 
+.bg-gray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+
+.bg-gray-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
+.bg-amber-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(120 53 15 / var(--tw-bg-opacity));
+}
+
+.bg-gray-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+}
+
+.bg-\[gray\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(128 128 128 / var(--tw-bg-opacity));
+}
+
 .pl-5 {
   padding-left: 1.25rem;
 }
@@ -835,6 +1250,50 @@ video {
 
 .pr-8 {
   padding-right: 2rem;
+}
+
+.pt-24 {
+  padding-top: 6rem;
+}
+
+.pt-20 {
+  padding-top: 5rem;
+}
+
+.pt-16 {
+  padding-top: 4rem;
+}
+
+.pt-\[3rem\] {
+  padding-top: 3rem;
+}
+
+.pt-10 {
+  padding-top: 2.5rem;
+}
+
+.pt-8 {
+  padding-top: 2rem;
+}
+
+.pb-10 {
+  padding-bottom: 2.5rem;
+}
+
+.pb-16 {
+  padding-bottom: 4rem;
+}
+
+.pt-6 {
+  padding-top: 1.5rem;
+}
+
+.pt-3 {
+  padding-top: 0.75rem;
+}
+
+.pl-3 {
+  padding-left: 0.75rem;
 }
 
 .font-mono {
@@ -876,6 +1335,11 @@ video {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .font-bold {
@@ -924,6 +1388,36 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
+.text-blue-400 {
+  --tw-text-opacity: 1;
+  color: rgb(96 165 250 / var(--tw-text-opacity));
+}
+
+.text-sky-600 {
+  --tw-text-opacity: 1;
+  color: rgb(2 132 199 / var(--tw-text-opacity));
+}
+
+.text-sky-700 {
+  --tw-text-opacity: 1;
+  color: rgb(3 105 161 / var(--tw-text-opacity));
+}
+
+.text-sky-500 {
+  --tw-text-opacity: 1;
+  color: rgb(14 165 233 / var(--tw-text-opacity));
+}
+
+.text-sky-800 {
+  --tw-text-opacity: 1;
+  color: rgb(7 89 133 / var(--tw-text-opacity));
+}
+
+.text-blue-500 {
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity));
+}
+
 .underline {
   text-decoration-line: underline;
 }
@@ -968,6 +1462,10 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.hover\:border-none:hover {
+  border-style: none;
+}
+
 .hover\:bg-black:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
@@ -1001,6 +1499,10 @@ video {
 .hover\:text-black:hover {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.hover\:no-underline:hover {
+  text-decoration-line: none;
 }
 
 .hover\:shadow-2xl:hover {
