--- a/src/output.css
+++ b/src/output.css
@@ -895,6 +895,14 @@ video {
   gap: 0.5rem;
 }
 
+.gap-\[3cm\] {
+  gap: 3cm;
+}
+
+.gap-\[2\.5cm\] {
+  gap: 2.5cm;
+}
+
 .overflow-y-hidden {
   overflow-y: hidden;
 }
@@ -991,6 +999,11 @@ video {
 .border-gray-200 {
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
+}
+
+.border-\[black\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
 .bg-\[\#2a4fcb\] {
@@ -1262,6 +1275,11 @@ video {
 .hover\:bg-white:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[black\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .hover\:text-\[black\]:hover {
